# pp-project

./: .gitignore  CMakeLists.txt  Complex.cuh  Cosine.cu  CosineGenerator.cu  CosineGenerator.cuh  FractalGenerator.cu  FractalGenerator.cuh  Julia.cu  JuliaGenerator.cu  JuliaGenerator.cuh  Mandelbrot.cu  MandelbrotGenerator.cu  MandelbrotGenerator.cuh  Tricorn.cu  TricornGenerator.cu  TricornGenerator.cuh  Utils.cu  Utils.cuh
CPU/: CMakeLists.txt
CPU/include/: CosineGenerator.hpp  FractalGenerator.hpp  JuliaGenerator.hpp  MandelbrotGenerator.hpp  TricornGenerator.hpp  Utils.hpp
CPU/src/: Cosine.cpp  CosineGenerator.cpp  Julia.cpp  JuliaGenerator.cpp  Mandelbrot.cpp  MandelbrotGenerator.cpp  Tricorn.cpp  TricornGenerator.cpp
CPU/src/libs/: FractalGenerator.cpp  Utils.cpp
GPU/: CMakeLists.txt
GPU/include/: Complex.cuh  MandelbrotGenerator.cuh  TricornGenerator.cuh  Utils.hpp
GPU/src/: Cosine.cpp  HelperOpenGL.cpp  Julia.cpp  Mandelbrot.cpp  MandelbrotGenerator.cu  Tricorn.cpp
GPU/src/libs/: FractalGenerator.cu  Utils.cpp
include/: CosineGenerator.cuh  FractalGenerator.cuh  HelperOpenGL.hpp  JuliaGenerator.cuh  Utils.hpp
include/glad/: gl.h
src/: Cosine.cpp  CosineGenerator.cu  Fractal.cpp  Julia.cpp  JuliaGenerator.cu  Mandelbrot.cpp  Tricorn.cpp  TricornGenerator.cu
src/libs/: FractalGenerator.cu  Utils.cpp
